--- a/content/posts/2019-12-30-new-post.md
+++ b/content/posts/2019-12-30-new-post.md
@@ -2,7 +2,7 @@
 template: post
 title: New post
 slug: /2019-12-29
-draft: true
+draft: false
 date: 2019-12-30T06:00:20.133Z
 description: test post
 category: Book Review
