Update Posts “2019-12-30-new-post”

--- a/content/posts/2019-12-30-new-post.md
+++ b/content/posts/2019-12-30-new-post.md
@@ -1,7 +1,7 @@
 ---
 template: post
 title: New post
-slug: /new-post
+slug: new-post
 draft: false
 date: 2019-12-30T06:00:20.133Z
 description: test post
