Update Posts “2019-12-30-new-post”

--- a/content/posts/2019-12-30-new-post.md
+++ b/content/posts/2019-12-30-new-post.md
@@ -2,7 +2,7 @@
 template: post
 title: A Project Manager's Role in the Company
 slug: a-project-managers-role-in-the-company
-draft: true
+draft: false
 date: 2019-12-30T06:00:20.133Z
 description: Why hire a project manager? It's quite simple really.
 category: Project Management
